Rework for review
commit c23201e562c7d155d2af47c21cc9d426f50adf0c
Author: Pieter de Visser <Pieter.de.Visser@ict.nl>
Date:   Wed Mar 22 09:35:00 2023 +0100

    kill rpclib_server only in unit tests

commit 02a9734fecf07cd26df83fc11f632c6c87b10176
Author: Pieter de Visser <Pieter.de.Visser@ict.nl>
Date:   Tue Mar 21 18:13:11 2023 +0100

    Fix integration tests

commit baf3ef331317ce9df4d127d78dc83ede66c671f0
Author: Pieter de Visser <Pieter.de.Visser@ict.nl>
Date:   Tue Mar 21 16:51:49 2023 +0100

    Find rpclib_server on PATH or in deploy_dir

commit 06719bc9d4539df578e4729010a083d5179f4283
Author: Pieter de Visser <Pieter.de.Visser@ict.nl>
Date:   Tue Mar 21 15:09:44 2023 +0100

    Easy rework

--- a/cmake/deploy_dir.h.in
+++ b/cmake/deploy_dir.h.in
@@ -6,9 +6,15 @@
 namespace cradle {
 
 inline std::string
-get_rpclib_server_path()
+get_deploy_dir()
 {
-    return "@deploy_dir@/rpclib_server@exe_ext@";
+    return "@deploy_dir@";
+}
+
+inline std::string
+get_exe_ext()
+{
+    return "@exe_ext@";
 }
 
 } // namespace cradle
