Make testing conditional

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -564,5 +564,7 @@ else()
 endif()
 string(REGEX REPLACE "\n" "" DOCKER_AUTH "${DOCKER_AUTH}")
 
-add_subdirectory(tests)
-add_subdirectory(python)
+if (CRADLE_ENABLE_TESTING)
+    add_subdirectory(tests)
+    add_subdirectory(python)
+endif()
