Only require FakeIt for testing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -177,7 +177,9 @@ endif()
 find_package(CURL REQUIRED)
 find_package(OpenSSL REQUIRED)
 find_package(SQLite3 REQUIRED)
-find_package(fakeit REQUIRED)
+if (CRADLE_ENABLE_TESTING)
+    find_package(fakeit REQUIRED)
+endif()
 find_package(websocketpp REQUIRED)
 find_package(yaml-cpp REQUIRED)
 find_package(spdlog REQUIRED)
