--- a/.github/workflows/msvc.yml
+++ b/.github/workflows/msvc.yml
@@ -46,7 +46,7 @@ jobs:
         path: build/generated
 
     - name: Deploy preprocessed headers to preprocessor-output repo
-      uses: JamesIves/github-pages-deploy-action@4.4.1
+      uses: JamesIves/github-pages-deploy-action@v4.4.1
       with:
         repository-name: alialib/alia-html
         branch: output
