Attempting to debug

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -155,9 +155,9 @@ if(IS_GCC OR IS_CLANG)
     set(CXX_COROUTINES_HEADER coroutine CACHE STRING "The header that should be included to obtain the coroutines APIs" FORCE)
     set(CXX_COROUTINES_NAMESPACE std CACHE STRING "The C++ namespace that contains the coroutines APIs" FORCE)
     set(Coroutines_FOUND TRUE CACHE BOOL "TRUE if we can compile and link a program using std::coroutines" FORCE)
-if(IS_GCC)
-    add_compile_options(-fcoroutines)
-endif()
+    if(IS_GCC)
+        add_compile_options(-fcoroutines)
+    endif()
 endif()
 
 FetchContent_Declare(fetched_cppcoro
@@ -169,11 +169,15 @@ list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_BINARY_DIR}")
 
 find_package(Boost REQUIRED COMPONENTS
     filesystem program_options)
+message(STATUS "finding Catch2")
 find_package(Catch2 REQUIRED)
+message(STATUS "finding nlohmann_json")
 find_package(nlohmann_json REQUIRED)
 if(CRADLE_SUPPORT_VCPKG)
+    message(STATUS "finding msgpack-cxx")
     find_package(msgpack-cxx REQUIRED)
 else()
+    message(STATUS "finding msgpack")
     find_package(msgpack REQUIRED)
 endif()
 find_package(CURL REQUIRED)
