Use CONFIG mode to find msgpack

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -175,7 +175,7 @@ message(STATUS "finding nlohmann_json")
 find_package(nlohmann_json REQUIRED)
 if(CRADLE_SUPPORT_VCPKG)
     message(STATUS "finding msgpack-cxx")
-    find_package(msgpack-cxx REQUIRED)
+    find_package(msgpack-cxx CONFIG REQUIRED)
 else()
     message(STATUS "finding msgpack")
     find_package(msgpack REQUIRED)
